profile-common-popup-call

--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -30,6 +30,11 @@
         width: 100%
         height: 100%
 
+        +below(700px)
+            justify-content: initial
+            align-items: initial
+            height: initial
+
         &_full
             width 100%
 
