profile-common-popup-qr

--- a/markup/components/profile-common-popup/profile-common-popup.pug
+++ b/markup/components/profile-common-popup/profile-common-popup.pug
@@ -40,6 +40,7 @@ mixin profile-common-popup-qr
         +b.profile-common-popup-qr
             +e.IMG(src='__static__img/content/qrcode.jpg' alt='qr-code').img
         .profile-common-popup__footer
+            .profile-common-popup-qr__share Share
             +share-buttons
                 +share-button('vk')
                 +share-button('fb')
