--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -11,6 +11,10 @@
     overflow-y: auto
     overflow-x: hidden
 
+    &_wrapper_100
+        & ^[0]__wrapper
+            height: 100%
+
     +below(768px)
         padding-top: 24px
         padding-bottom: 24px
