--- a/markup/components/auth-popup/auth-popup.pug
+++ b/markup/components/auth-popup/auth-popup.pug
@@ -4,6 +4,7 @@ include ../heading/heading
 
 mixin auth-popup()
     +popup.popup_paddings#auth-popup
+        +popup-close.popup__close_no_translate
         +container.container__height_100p
             +b.auth-popup&attributes(attributes)
                 +e.col._action
