--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -56,6 +56,10 @@
         align-items: center
         width: 60px
         height: 60px
+        z-index 100
+
+        &_no_translate
+            transform: translate(0, 0)
 
         +below(768px)
             display: flex
