--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -32,7 +32,7 @@ block content
         //+container
 
         +demo
-            +demo-link('#profile-video')(data-popup-id='#profile-photo' data-action='show').js-toggle-popup call
+            +demo-link('#profile-video')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup call
 
 block scripts
     //+map-scripts
@@ -44,3 +44,4 @@ block popups
     +profile-common-popup-qr
     +profile-common-popup-report
     +profile-photo-popup
+    +auth-popup
