--- a/markup/components/agency/agency.pug
+++ b/markup/components/agency/agency.pug
@@ -20,7 +20,7 @@ mixin agency()
                     +badges._top
                         +badges-item._vip._skew
                             span Top 1
-                    +e.col
+                    +e.col._heading
                         +e.info
                             +heading._md._uppercase Premium Escape
                             +e.UL.description
@@ -41,7 +41,7 @@ mixin agency()
                     +heading About agency
                     +e.P.text Mon nom est Megan, cultivée, je suis la plus belle compagne aventureuse pour n’importe quelle occasion. im the perfect woman that can give you the satisfaction, if you need relax and massage, call me, im real naughty, clean and safety so my picture is recent and 100% real, i propose Full package series kiseessss call me baby
 
-                +e.row
+                +e.row._short
                     +e.col
                         +short-info
                             +short-info-heading location
