--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -2,19 +2,34 @@
     display: block
     padding-bottom: 40px
 
+    +below(1300px)
+        padding-top: 30px
+
+    +below(768px)
+        padding-top: 0
+
     &__header
         margin-top: 32px
         background-color: #fff
         box-shadow: 0 20px 50px rgba(29, 29, 29, .02)
 
+        +below(768px)
+            margin-top: 24px
+
         .image-bg
             z-index: initial
             height: 300px
+
+            +below(768px)
+                height: 150px
 
         .avatar
             position: absolute
             top: -44px
             left: 0
+
+            +below(580px)
+                position: static
 
     &__row
         position: relative
@@ -32,16 +47,59 @@
         &_info
             padding-left: 150px // 120px + 30px = avatar width + avatar margin right
 
+            +below(1024px)
+                flex-wrap: wrap
+
+            +below(580px)
+                padding-left: 0
+                flex-direction: column
+                align-items: center
+
         &_about
             display: none
             padding: 60px 188px 56px
 
+            +below(1024px)
+                padding: 30px
+
+        &_short
+            +below(1024px)
+                padding: 0
+                padding-top: 20px
+                flex-wrap: wrap
+
+            & ^[0]__col
+                +below(1024px)
+                    width: 50%
+                    padding: 12px
+
+                    +below(768px)
+                        width: 100%
+
     &__col
         display: block
+
+        &_heading
+            +below(900px)
+                width: 100%
+                margin-bottom: 24px
+
+            +below(580px)
+                width: auto
+                text-align: center
+                margin-top: 24px
 
         &_action
             margin-left: auto
             cursor: pointer
+
+            +below(900px)
+                width: 50%
+                margin-left: 0
+
+                +below(580px)
+                    width: auto
+                    text-align: center
 
             &.active
 
@@ -51,17 +109,34 @@
         &_rating
             margin-left: 66px
 
+            +below(900px)
+                width: 50%
+                margin-left: 0
+
+                +below(580px)
+                    margin-top: 24px
+                    width: auto
+
             .rating__value
                 margin-left: 14px
 
         &_phone
             margin-left: auto
 
+            +below(1024px)
+                margin: 0
+
         &_site
             margin-left: 57px
 
+            +below(1024px)
+                margin: 0
+
         &_email
             margin-left: 92px
+
+            +below(1024px)
+                margin: 0
 
         &_modified
             display: flex
@@ -69,6 +144,9 @@
             justify-content: space-between
             margin-left: 103px
             margin-right: 31px
+
+            +below(1024px)
+                margin: 0
 
             span
                 display: block
@@ -90,9 +168,16 @@
         font-weight 300
         line-height 1.625
 
+        +below(1024px)
+            margin-top: 15px
+            max-width: 500px
+
     &__info
         display: block
         margin-top: -5px
+
+        +below(768px)
+            margin-top: 0
 
     &__description
         display: flex
