--- a/markup/components/user-messages/user-messages.pug
+++ b/markup/components/user-messages/user-messages.pug
@@ -36,6 +36,8 @@ mixin user-messages()
                         +e.SPAN.heading
                             | Message with
                             span Nikolas
+                        +avatar('nikolas.png')._size_small
+
                         +dotted-dropdown-pure
                             +list._shadow
                                 +list-item._deep_dark
