--- a/markup/components/user-feeds/user-feeds.styl
+++ b/markup/components/user-feeds/user-feeds.styl
@@ -2,17 +2,45 @@
     display: block
     padding-bottom: 54px
 
+    +below(1300px)
+        padding-top: 30px
+
+    +below(768px)
+        padding-top: 0
+
+        .container
+            padding-left: 0
+            padding-right: 0
+
     .heading
         margin-top: 47px
+
+        +below(768px)
+            margin-top: 32px
+            padding-left: 31px
+            padding-right: 31px
 
     &__content
         margin-top: 46px
 
+        +below(768px)
+            margin-top: 33px
+
         .message
             border: 1px solid borderColor
 
+            +below(768px)
+                border-left: 0
+                border-right: 0
+
+                &:not(:first-child)
+                    border-top: 0
+
             &:not(:last-child)
                 margin-bottom: 12px
+
+                +below(768px)
+                    margin-bottom: 0
 
     &__like-icon
         fill: mainColor
