--- a/markup/components/payment-method/payment-method.pug
+++ b/markup/components/payment-method/payment-method.pug
@@ -5,5 +5,6 @@ mixin payment-method(heading, checked)
             +e.heading=heading
             block
 
-mixin payment-method-img(src)
+mixin payment-method-img(src, srcChecked)
     +e.IMG(src='__static__img/content/payment-methods/'+src alt='').logo&attributes(attributes)
+    +e.IMG(src='__static__img/content/payment-methods/'+srcChecked alt='').logo._checked&attributes(attributes)
