--- a/markup/components/payment-method/payment-method.styl
+++ b/markup/components/payment-method/payment-method.styl
@@ -14,6 +14,11 @@
                 & ^[0]__heading
                     color #fff
 
+                & ^[0]__logo
+                    display: none
+
+                    &_checked
+                        display: inline
     &__content
         display: flex
         align-items: center
@@ -35,6 +40,9 @@
 
     &__logo
         height: auto
+
+        &_checked
+            display: none
 
         &_bitcoin
             width: 77.1px
